--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-polyfill": "^6.26.0",
     "fractional": "^1.0.0",
     "install": "^0.13.0",
-    "npm": "^7.16.0"
+    "npm": "^7.16.0",
+    "uniqid": "^5.3.0"
   }
 }
